--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,11 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  font-family: Helvetica, sans-serif;
 }
 
 .app {
   width: 100vw;
   height: 100vh;
+  padding: 15px;
 }
