--- a/src/components/List.scss
+++ b/src/components/List.scss
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.list__title {
+  color: #353434b2;
+}
+
 .list__card {
   height: 120px;
   margin: 20px 0;
@@ -33,10 +37,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin-left:10px;
 }
 
 .card__logo-img {
-  width: 70px;
+  max-width: 60px;
 }
 
 .card__date {
@@ -48,7 +54,7 @@
 }
 
 .travel__data-wrapper {
-  margin: 0 25px;
+  margin: 0 10px;
 }
 
 .travel__city {
@@ -75,12 +81,18 @@
   width: 70px;
   padding-top: 5px;
   text-transform: uppercase;
+  color:#707070;
 }
 
 .list__btn {
   width: 40px;
   height: 40px;
   border-radius: 80px;
+  background-color: #65535373;
+  font-size: 25px;
+  padding-bottom: 5px;
+  color:white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .list__input {
