--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -102,17 +102,24 @@ font-size: 12px;
   padding:15px 0;
 }
 
-.user__name-content {
-  font-weight: 540;
-}
-
 .detail__qr-wrapper {
   display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-.boarding__info {}
+.boarding__info {
+  margin:10px 20px;
+}
 
+.user__boarding-title {
+  max-width: 80px;
+  color:#707070;
+  font-size: 16px;
+  padding: 0 0 10px;
+}
 
 .qr__small {
-  width: 80px;
+  width: 70px;
+  margin-right: 20px;
 }
