Add Iberia Colors

--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -13,7 +13,7 @@
   height: 95vh;
   border-radius: 25px;
   background-color: white;
-  background-image: linear-gradient(to right bottom, #8B2973, #8B2973);
+  background-image: linear-gradient(to right bottom, #D7192D, #D7192D);
   background-size: 100% 41%;
   background-position-y: top;
   background-repeat: no-repeat;
