--- a/src/components/List.scss
+++ b/src/components/List.scss
@@ -53,20 +53,31 @@
   display: flex;
 }
 
-.travel__data-wrapper {
-  margin: 0 10px;
+.card__travel-wrapper-renfe{
+  display: flex;
 }
 
+.travel__data-wrapper {
+  margin: 0 10px;
+  max-width: 160px;
+}
+.travel__data-wrapper-renfe {
+  margin: 0 10px;
+  max-width: 160px; 
+}
 .travel__city {
   padding: 5px;
+  text-align: center; 
 }
 
 .travel__time {
   padding: 5px;
 }
 
-.travel__icon-img {
+.travel__icon {
   width: 15px;
+  padding-top:6px; 
+  display: flex; 
 }
 
 .list__btn-wrapper {
