Improve media queries in iberia

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,10 +16,12 @@
   border-radius: 40px;
   display: flex;
   align-items: center; 
+  justify-content: space-around;
   @media (min-width: 500px){
-    justify-content: space-between;
+    
     background-color: #EFEFEF;
-
   }
-
+  @media(min-width: 768px){
+    justify-content: space-around;
+  }
 }
