--- a/src/components/QrDetail.scss
+++ b/src/components/QrDetail.scss
@@ -7,7 +7,7 @@
  flex-direction: column;
  height: 95vh;
  border-radius: 25px;
- background-color:#8B2973;
+ background-color:#EFEFEF;
  justify-content: center;
  align-items: center;
 }
