--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  height: 95vh;
+  height: 80vh;
   border-radius: 25px;
   background-color: white;
   background-image: linear-gradient(to right bottom, #D7192D, #D7192D);
@@ -43,7 +43,7 @@
   background-color: white;
   margin-top:5%;
   border-radius: 25px;
-  height: 82%;
+  min-height: 90%;
 }
 
 .detail__card__header {
@@ -92,7 +92,7 @@
 }
 .detail__city-renfe {
   padding-bottom: 2%; 
-  font-size: 25px;
+  font-size: 20px;
   text-align: center; 
   max-width: 250px;
 }
@@ -103,7 +103,7 @@
 .detail__time-renfe {
   font-size: 18px;
   color:#707070;
-  text-align: center; 
+  margin: 0 auto; 
 }
 .detail__travel-icon {
   display: flex; 
@@ -111,8 +111,8 @@
 }
 .detail__travel-icon-renfe {
   display: flex;
-  justify-content: center; 
-  text-align: center; 
+  justify-content: center;
+  align-items: center;  
   margin: 3%; 
 }
 .detail__icon-img {
@@ -169,7 +169,12 @@ font-size: 12px;
   justify-content: space-between;
   margin-bottom: 10%;
 }
+.detail__qr-wrapper-renfe {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 
+}
 .boarding__info {
   margin:5px 20px;
 }
