--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -214,3 +214,9 @@ font-size: 12px;
   color:white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.fa-info{
+  font-size: 20px;
+}
+.fa-angle-left{
+  font-size: 25px;
+}
