--- a/src/components/QrDetail.scss
+++ b/src/components/QrDetail.scss
@@ -10,14 +10,16 @@
  background-color:#EFEFEF;
  justify-content: center;
  align-items: center;
-}
-.qr__link-go-bak-wrapper {
  position: relative;
- height: 20%;
+ width: 100%; 
 }
-.qr__link-go-back{
- position: absolute;
+.qr__link-go-back-wrapper2{
+  position: absolute;
+  top: 5%;
+  left: 7%; 
+  height: 20%;
 }
+
 .detail-qr__small {
  box-shadow: 10px 6px 10px 0 rgba(0, 0, 0, 0.424);
  margin-right: 0px;
