--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  height: 95vh;
+  height: 80vh;
   border-radius: 25px;
   background-color: white;
   background-image: linear-gradient(to right bottom, #CC0099, #CC0099);
@@ -37,6 +37,8 @@
   background-position-y: top;
   background-repeat: no-repeat;
   position: relative;
+  max-width: 340px;
+  flex-grow: 1; 
 }
 
 .link-go-back {
