--- a/src/components/Back.scss
+++ b/src/components/Back.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  height: 95vh;
+  height: 80vh;
   border-radius: 25px;
   background-color: #8B2973;
   background-size: 100% 41%;
   position: relative;
   @media(min-width:500px){
-    width: 400px;
+    width:340px;
   }
 }
 
@@ -20,7 +20,7 @@
 .back__link-go-back {
   color:white;
   font-weight: 700;
-  margin:10px;
+  margin-bottom:10px;
 }
 
 .back__card {
@@ -48,6 +48,7 @@
   }
 }
 .back__card__header {
+  padding: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
