Change btn color

--- a/src/components/List.scss
+++ b/src/components/List.scss
@@ -103,11 +103,11 @@
   width: 40px;
   height: 40px;
   border-radius: 80px;
-  background-color: #65535373;
+  background-color: #6D6C6C;
   font-size: 25px;
-  padding-bottom: 5px;
   color:white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid transparent;
 }
 
 .list__input {
