--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .app {
