--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -227,9 +227,10 @@ font-size: 12px;
   border-radius: 80px;
   background-color: #65535373;
   font-size: 25px;
-  padding-bottom: 5px;
+  padding-bottom: 2px;
   color:white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid transparent;
 }
 .fa-info{
   font-size: 20px;
